deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-web-app
  template:
    metadata:
      labels:
        app: static-web-app
    spec:
      containers:
      - name: static-web-container
        image: we have to add the latest image here
        ports:
        - containerPort: 80
